--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
                     <a href="images/folio/gallery/1.jpg" class="entry__link glightbox"
                         data-glightbox="title: White Knit Cap; description: .entry__desc-01">
                         <div class="entry__thumb">
-                            <img src="images/folio/1.jpg"
-                                srcset="images/folio/01.jpg 1x, images/folio/white_turban@2x.jpg 2x" alt="">
+                            <img src="images/folio/1.jpg" srcset="images/folio/01.jpg 1x, images/folio/01.jpg 2x"
+                                alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">White Knit Cap</h4>
@@ -358,8 +358,8 @@
                     <a href="images/folio/gallery/2.jpg" class="entry__link glightbox"
                         data-glightbox="title: WoodCraft; description: .entry__desc-02">
                         <div class="entry__thumb">
-                            <img src="images/folio/2.jpg"
-                                srcset="images/folio/02.jpg 1x, images/folio/woodcraft@2x.jpg 2x" alt="">
+                            <img src="images/folio/2.jpg" srcset="images/folio/02.jpg 1x, images/folio/02.jpg 2x"
+                                alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">WoodCraft</h4>
@@ -381,8 +381,8 @@
                     <a href="images/folio/gallery/3.jpg" class="entry__link glightbox"
                         data-glightbox="title: Caffeine & Tulips; description: .entry__desc-03">
                         <div class="entry__thumb">
-                            <img src="images/folio/3.jpg"
-                                srcset="images/folio/03.jpg 1x, images/folio/caffeine_and_tulips@2x.jpg 2x" alt="">
+                            <img src="images/folio/3.jpg" srcset="images/folio/03.jpg 1x, images/folio/03.jpg 2x"
+                                alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Caffeine & Tulips</h4>
@@ -404,8 +404,8 @@
                     <a href="images/folio/gallery/4.jpg" class="entry__link glightbox"
                         data-glightbox="title: Grayscale; description: .entry__desc-04">
                         <div class="entry__thumb">
-                            <img src="images/folio/4.jpg"
-                                srcset="images/folio/04.jpg 1x, images/folio/grayscale@2x.jpg 2x" alt="">
+                            <img src="images/folio/4.jpg" srcset="images/folio/04.jpg 1x, images/folio/04.jpg 2x"
+                                alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Grayscale</h4>
@@ -427,7 +427,7 @@
                     <a href="images/folio/gallery/5.jpg" class="entry__link glightbox"
                         data-glightbox="title: The Lamp; description: .entry__desc-05">
                         <div class="entry__thumb">
-                            <img src="images/folio/5.jpg" srcset="images/folio/05.jpg 1x, images/folio/lamp@2x.jpg 2x"
+                            <img src="images/folio/5.jpg" srcset="images/folio/05.jpg 1x, images/folio/05.jpg 2x"
                                 alt="">
                         </div>
                         <div class="entry__info">
@@ -450,8 +450,8 @@
                     <a href="images/folio/gallery/6.jpg" class="entry__link glightbox"
                         data-glightbox="title: Tropical; description: .entry__desc-06">
                         <div class="entry__thumb">
-                            <img src="images/folio/6.jpg"
-                                srcset="images/folio/06.jpg 1x, images/folio/tropical@2x.jpg 2x" alt="">
+                            <img src="images/folio/6.jpg" srcset="images/folio/06.jpg 1x, images/folio/06.jpg 2x"
+                                alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Tropical</h4>
